--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <meta name="msapplication-config" content="/assets/img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <!-- Commentaire pour tuto --> 
-  <!-- Facebook domain verification -->
+  <!-- Facebook & google domain verification -->
+  <meta name="google-site-verification" content="eomRbkW4bJaCRWZvbDueLJ4RQFcNfi6xIf4Iz3lTsuw" />
   <meta name="facebook-domain-verification" content="eocnfq17gah7jewspjqeli5ab81rkb" />
   <!-- Favicon end -->
 </head>
