changed email and phone number

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                 <div class="modal">
                   <div class="modal--information">
                     <p>11 Palm Street, Boumhel, Tunis</p>
-                    <a href="mailto:ouremail@gmail.com">contact+website@art-guru.tech</a>
-                    <a href="tel:+148126287560">+216 24 26 60 06</a>
+                    <a href="mailto:infos+website@art-guru.tech">infos+website@art-guru.tech</a>
+                    <a href="tel:+21624266006">+216 24 26 60 06</a>
                   </div>
                   <ul class="modal--options">
                     <li><a href="https://www.linkedin.com/in/melek-gharbi/" target="_blank">LinkedIn</a></li>
