--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
+  <meta name="description" content="ArtGuru helps companies launch and scale their products using growth hacking, artificial intelligence, advanced analytics.">
   <meta name="keywords" content="Growth Studio, Growth Hacking, Startups, Artificial Intelligence, jquery">
   <meta name="ArtGuru" content="Melek Gharbi">
   <link rel="stylesheet" href="assets/css/main.css">
