--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h2>Selected work</h2>
               <div class="work--lockup">
                 <ul class="slider">
+
                   <li class="slider--item slider--item-left">
                     <a href="https://www.eluproduitdelanneealgerie.com/elu-produit-de-lannee/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets\img\product-of-the-year.png" alt="Victory">
+                        <img src="assets\img\produitanneelogoAlgerie.png" alt="Victory">
                       </div>
                       <p class="slider--item-title">Product Of The Year Algeria</p>
                       <p class="slider--item-description">Market penetration &amp; Lead Acquisition</p>
                     </a>
                   </li>
+
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
@@ -123,6 +125,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <p class="slider--item-description">Full Stack Growth Hacking & Acquisition Scale</p>
                     </a>
                   </li>
+
                   <li class="slider--item slider--item-right">
                     <a href="http://hifee.co/" target="_blank">
                       <div class="slider--item-image">
@@ -132,6 +135,167 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <p class="slider--item-description">Market Validation &amp; Lead Acquisition</p>
                     </a>
                   </li>
+                  
+                  <li class="slider--item">
+                    <a href="https://irmcmaghreb.org/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_irmc.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">IRMC</p>
+                      <p class="slider--item-description">Web Developement</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://the40hackers.com/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_the40Hackers.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">The40Hackers</p>
+                      <p class="slider--item-description">Growth Hacking courses</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="produitdelannee.tn" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\produitanneelogoTunisie.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Product Of The Year Tunisia</p>
+                      <p class="slider--item-description">Influence Marketing &amp; Conversion Rate Optimization</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://linkhr.fr/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_linkHR.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">LinkHr</p>
+                      <p class="slider--item-description">Growth Hacking courses &amp; Lead Acquisition</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.telup.com/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_TelUp.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">TelUp</p>
+                      <p class="slider--item-description">Lead Acquisition</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://myresidia.com//" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_residia.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Residia</p>
+                      <p class="slider--item-description">Lead Acquisition</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.instagram.com/boulangerie.chezmaman/?hl=en" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_chez_maman.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Chez Maman</p>
+                      <p class="slider--item-description">Analytics &amp; Tracking</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://lydia-media.com/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_Lydia_Media.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Lydia Media</p>
+                      <p class="slider--item-description">Growth Hacking</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.sno.tn/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_Sno_Labs.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Sno Labs</p>
+                      <p class="slider--item-description">Growth Hacking</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_HalfLeg_Studio.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">HalfLeg Studio </p>
+                      <p class="slider--item-description">Web Developement</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.labfortytwo.com/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_Lab42.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Lab42</p>
+                      <p class="slider--item-description">Web Developement</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.moonzo.com/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_Moonzo.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Moonzo</p>
+                      <p class="slider--item-description">Growth Hacking</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://sintegraconsulting.com/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_Sintegra_Studio.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Sintegra Studio</p>
+                      <p class="slider--item-description">Growth Hacking</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.aditef.org/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_ADITEF.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">ADITEF</p>
+                      <p class="slider--item-description">Growth Hacking</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.peaksports.tn/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_PeakSport.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">Peak Sport</p>
+                      <p class="slider--item-description">Content Creation</p>
+                    </a>
+                  </li>
+
+                  <li class="slider--item">
+                    <a href="https://www.maparatunisie.tn/" target="_blank">
+                      <div class="slider--item-image">
+                        <img src="assets\img\logo_MaParaTunisie.png" alt="Victory">
+                      </div>
+                      <p class="slider--item-title">MaPara Tunisie</p>
+                      <p class="slider--item-description">Analytics &amp; Tracking</p>
+                    </a>
+                  </li>
+
                 </ul>
                 <div class="slider--prev">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
